--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/iconify": "^3.1.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
+    "iconify-icon": "^2.2.0",
     "postcss": "^8.4.49",
     "simplebar": "^6.2.7",
     "tailwindcss": "^3.4.15"
