マイグレーション時に自動的に更新されるように設定

--- a/test/fixtures/procurements.yml
+++ b/test/fixtures/procurements.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: procurements
+#
+#  id             :bigint           not null, primary key
+#  purchase_price :decimal(, )
+#  forwarding_fee :decimal(, )
+#  photo_fee      :decimal(, )
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#  sku_id         :bigint
+#
 
 one:
   order: one
