--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: expenses
+#
+#  id         :bigint           not null, primary key
+#  year       :integer
+#  month      :integer
+#  item_name  :string
+#  amount     :decimal(, )
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   year: 1
