--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: orders
+#
+#  id              :bigint           not null, primary key
+#  order_number    :string
+#  sale_date       :date
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#  tracking_number :string
+#
 
 one:
   order_number: MyString
