--- a/test/fixtures/payment_fees.yml
+++ b/test/fixtures/payment_fees.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: payment_fees
+#
+#  id           :bigint           not null, primary key
+#  order_id     :bigint           not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  fee_category :string
+#  fee_amount   :decimal(, )
+#
 
 one:
   order: one
