--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: products
+#
+#  id                  :bigint           not null, primary key
+#  oem_part_number     :string
+#  international_title :string
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#  manufacturer_id     :bigint           not null
+#
 
 one:
   oem_part_number: MyString
