--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: sales
+#
+#  id                 :bigint           not null, primary key
+#  order_id           :bigint           not null
+#  order_net_amount   :decimal(, )
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#  order_gross_amount :decimal(, )
+#
 
 one:
   order: one
