--- a/test/fixtures/shipments.yml
+++ b/test/fixtures/shipments.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: shipments
+#
+#  id                              :bigint           not null, primary key
+#  order_id                        :bigint           not null
+#  customer_international_shipping :decimal(, )
+#  created_at                      :datetime         not null
+#  updated_at                      :datetime         not null
+#  cpass_trade_id                  :integer
+#
 
 one:
   order: one
