--- a/test/fixtures/skus.yml
+++ b/test/fixtures/skus.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: skus
+#
+#  id               :bigint           not null, primary key
+#  sku_code         :string
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#  quantity         :integer
+#  sku_net_amount   :decimal(10, 2)
+#  sku_gross_amount :decimal(10, 2)
+#
 
 one:
   sku_code: MyString
