クソコードを削除

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -2,12 +2,15 @@
 #
 # Table name: orders
 #
-#  id              :bigint           not null, primary key
-#  order_number    :string
-#  sale_date       :date
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#  tracking_number :string
+#  id           :bigint           not null, primary key
+#  order_number :string
+#  sale_date    :date
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+# Indexes
+#
+#  index_orders_on_order_number  (order_number)
 #
 
 one:
