--- a/test/fixtures/shipments.yml
+++ b/test/fixtures/shipments.yml
@@ -3,11 +3,15 @@
 # Table name: shipments
 #
 #  id                              :bigint           not null, primary key
-#  order_id                        :bigint           not null
 #  customer_international_shipping :decimal(, )
 #  created_at                      :datetime         not null
 #  updated_at                      :datetime         not null
 #  cpass_trade_id                  :integer
+#  order_id                        :bigint
+#
+# Indexes
+#
+#  index_shipments_on_order_id  (order_id)
 #
 
 one:
