--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -9,6 +9,15 @@
 #  updated_at          :datetime         not null
 #  manufacturer_id     :bigint           not null
 #
+# Indexes
+#
+#  index_products_on_manufacturer_id  (manufacturer_id)
+#  index_products_on_oem_part_number  (oem_part_number)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (manufacturer_id => manufacturers.id)
+#
 
 one:
   oem_part_number: MyString
