--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,6 +14,11 @@
 #  last_name              :string
 #  first_name             :string
 #
+# Indexes
+#
+#  index_users_on_email                 (email) UNIQUE
+#  index_users_on_reset_password_token  (reset_password_token) UNIQUE
+#
 
 one:
   name: MyString
