--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@iconify/iconify": "^3.1.1",
+    "@iconify/icons-lucide": "^1.2.135",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "iconify-icon": "^2.2.0",
