--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hotwired/turbo-rails": "^8.0.12",
     "@iconify/icons-lucide": "^1.2.135",
     "autoprefixer": "^10.4.20",
+    "choices.js": "^10.2.0",
     "daisyui": "^4.12.14",
     "iconify-icon": "^2.0.0",
     "postcss": "^8.4.49",
