--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,8 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d parts_sync_new_development -U postgres"]
+      test:
+        ['CMD-SHELL', 'pg_isready -d parts_sync_new_development -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -27,9 +28,13 @@ services:
       - node_modules:/parts-sync-new/node_modules
     environment:
       TZ: Asia/Tokyo
+      GOOGLE_CLIENT_ID: '${GOOGLE_CLIENT_ID}'
+      GOOGLE_CLIENT_SECRET: '${GOOGLE_CLIENT_SECRET}'
+    env_file:
+      - .env
     ports:
-      - "3000:3000"    # Rails用
-      - "12345:12345"  # rdbgデバッグ用TCPポート
+      - '3000:3000' # Rails用
+      - '12345:12345' # rdbgデバッグ用TCPポート
     depends_on:
       db:
         condition: service_healthy
