--- a/config/database.yml
+++ b/config/database.yml
@@ -18,9 +18,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
-  username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
-  password: <%= ENV.fetch("POSTGRES_PASSWORD") { 'password' } %>
+  host: db
+  username: postgres
+  password: password
 
 development:
   <<: *default
@@ -59,7 +59,7 @@ development:
 test:
   <<: *default
   database: parts_sync_new_test
-  host: <%= ENV.fetch("POSTGRES_HOST") { 'localhost' } %>
+  host: db
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
