--- a/config/database.yml
+++ b/config/database.yml
@@ -11,20 +11,22 @@
 #
 # Configure Using Gemfile
 # gem "pg"
-#
 default: &default
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: db
-  username: postgres
-  password: password
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
+  username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { 'password' } %>
 
 development:
   <<: *default
   database: parts_sync_new_development
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
+  username: <%= ENV.fetch("POSTGRES_USER") { 'postgres' } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { 'password' } %>
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -59,7 +61,7 @@ development:
 test:
   <<: *default
   database: parts_sync_new_test
-  host: db
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'localhost' } %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
