--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,10 +10,11 @@ RUN apt-get update -qq \
 && wget --quiet -O - /tmp/pubkey.gpg https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
 && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs yarn vim
-RUN mkdir /parts-sync-new
-WORKDIR /parts-sync-new
+RUN mkdir /app
+WORKDIR /app
 RUN gem install bundler
-COPY . /parts-sync-new
-RUN yarn global add esbuild tailwindcss
+COPY Gemfile Gemfile.lock ./
+RUN bundle install
 COPY package.json yarn.lock ./
 RUN yarn install
+RUN yarn global add esbuild tailwindcss
