--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,13 @@
 services:
   db:
-    image: postgres
+    image: postgres:14
     restart: always
     environment:
       TZ: Asia/Tokyo
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
     volumes:
-      - postgresql_data:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
     healthcheck:
@@ -23,11 +24,14 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - .:/parts-sync-new
+      - .:/app
       - bundle_data:/usr/local/bundle:cached
-      - node_modules:/parts-sync-new/node_modules
+      - node_modules:/app/node_modules
     environment:
       TZ: Asia/Tokyo
+      POSTGRES_HOST: db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
       GOOGLE_CLIENT_ID: '${GOOGLE_CLIENT_ID}'
       GOOGLE_CLIENT_SECRET: '${GOOGLE_CLIENT_SECRET}'
     env_file:
