--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,20 +1,24 @@
-FROM ruby:3.3.6
-ENV LANG C.UTF-8
-ENV TZ Asia/Tokyo
-RUN apt-get update -qq \
-&& apt-get install -y ca-certificates curl gnupg \
-&& mkdir -p /etc/apt/keyrings \
-&& curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-&& NODE_MAJOR=20 \
-&& echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-&& wget --quiet -O - /tmp/pubkey.gpg https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-&& echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs yarn vim
-RUN mkdir /app
-WORKDIR /app
-RUN gem install bundler
+# Make sure RUBY_VERSION matches the Ruby version in .ruby-version
+ARG RUBY_VERSION=3.3.6
+FROM ruby:$RUBY_VERSION-slim
+
+# 開発用パッケージのインストール
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y \
+    build-essential \
+    git \
+    libpq-dev \
+    postgresql-client \
+    vim \
+    && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives
+
+# Rails app lives here
+WORKDIR /rails
+
+# Install application gems
 COPY Gemfile Gemfile.lock ./
 RUN bundle install
-COPY package.json yarn.lock ./
-RUN yarn install
-RUN yarn global add esbuild tailwindcss
+
+# Start the server by default, this can be overwritten at runtime
+EXPOSE 3000
+CMD ["./bin/rails", "server", "-b", "0.0.0.0"]
