--- a/compose.yml
+++ b/compose.yml
@@ -1,48 +1,30 @@
+version: '3'
 services:
   db:
     image: postgres:14
-    restart: always
-    environment:
-      TZ: Asia/Tokyo
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: postgres
     volumes:
-      - postgresql_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: password
     ports:
-      - 5432:5432
-    healthcheck:
-      test:
-        ['CMD-SHELL', 'pg_isready -d parts_sync_new_development -U postgres']
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - '5432:5432'
+
   web:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && ./bin/dev"
-    tty: true
-    stdin_open: true
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/app
-      - bundle_data:/usr/local/bundle:cached
-      - node_modules:/app/node_modules
-    environment:
-      TZ: Asia/Tokyo
-      POSTGRES_HOST: db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      GOOGLE_CLIENT_ID: '${GOOGLE_CLIENT_ID}'
-      GOOGLE_CLIENT_SECRET: '${GOOGLE_CLIENT_SECRET}'
-    env_file:
-      - .env
+      - .:/rails
+      - bundle_data:/usr/local/bundle
     ports:
-      - '3000:3000' # Rails用
-      - '12345:12345' # rdbgデバッグ用TCPポート
+      - '3000:3000'
+    environment:
+      RAILS_ENV: development
+      EDITOR: vim
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+
 volumes:
+  postgres_data:
   bundle_data:
-  postgresql_data:
-  node_modules:
