--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,15 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
+# Node.js関連
 /node_modules
+/.yarn/*
+!/.yarn/patches
+!/.yarn/plugins
+!/.yarn/releases
+!/.yarn/sdks
+!/.yarn/versions
+.pnp.*
 
 # Ignore vendor directory
 /vendor
@@ -47,3 +55,6 @@
 ._.DS_Store
 **/.DS_Store
 **/._.DS_Store
+
+# Ignore .cursorrules
+.cursorrules
