--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   db:
     image: postgres:14
@@ -8,6 +7,11 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - '5432:5432'
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   web:
     build:
@@ -23,7 +27,8 @@ services:
       RAILS_ENV: development
       EDITOR: vim
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
