--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,11 +6,17 @@ FROM ruby:$RUBY_VERSION-slim
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y \
     build-essential \
+    curl \
     git \
     libpq-dev \
     postgresql-client \
     vim \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives
+
+# Node.jsとyarnのインストール
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y nodejs \
+    && npm install -g yarn
 
 # Rails app lives here
 WORKDIR /rails
