--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,30 +1,39 @@
-# Make sure RUBY_VERSION matches the Ruby version in .ruby-version
-ARG RUBY_VERSION=3.3.6
-FROM ruby:$RUBY_VERSION-slim
+FROM ruby:3.3.6
 
-# 開発用パッケージのインストール
+# 必要なパッケージのインストール
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y \
-    build-essential \
-    curl \
-    git \
-    libpq-dev \
-    postgresql-client \
-    vim \
-    && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives
+    apt-get install -y ca-certificates curl gnupg build-essential libpq-dev vim && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
 
-# Node.jsとyarnのインストール
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
-    && apt-get install -y nodejs \
-    && npm install -g yarn
+# Node.jsのセットアップ
+RUN NODE_MAJOR=20 && \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
+    apt-get update && apt-get install -y nodejs
 
-# Rails app lives here
-WORKDIR /rails
+# Yarnのインストール
+RUN npm install -g yarn
 
-# Install application gems
+# アプリケーションディレクトリの作成
+WORKDIR /app
+
+# GemfileとGemfile.lockをコピー
 COPY Gemfile Gemfile.lock ./
-RUN bundle install
 
-# Start the server by default, this can be overwritten at runtime
+# Bundlerの設定とGemのインストール
+RUN gem install bundler && \
+    bundle config set --local without '' && \
+    bundle install
+
+# package.jsonをコピーしてnpm packagesをインストール
+COPY package.json yarn.lock ./
+RUN yarn install
+
+# アプリケーションコードをコピー
+COPY . .
+
+# 必要なnpmパッケージをグローバルにインストール
+RUN npm install -g esbuild tailwindcss
+
+# ポートの公開
 EXPOSE 3000
-CMD ["./bin/rails", "server", "-b", "0.0.0.0"]
