--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,30 @@
 services:
   db:
     image: postgres:14
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    restart: always
     environment:
+      TZ: Asia/Tokyo
       POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+    volumes:
+      - postgresql_data:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - 5432:5432
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
-      interval: 5s
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 10s
       timeout: 5s
       retries: 5
 
@@ -17,19 +32,61 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && ./bin/dev"
+    tty: true
+    stdin_open: true
     volumes:
-      - .:/rails
-      - bundle_data:/usr/local/bundle
+      - .:/app
+      - bundle_data:/usr/local/bundle:cached
+      - node_modules:/app/node_modules
+      - tmp-data:/app/tmp:cached
+    environment:
+      TZ: Asia/Tokyo
+      POSTGRES_HOST: db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      REDIS_URL: redis://redis:6379/0
+      RAILS_LIVE_RELOAD_ENABLED: 'true'
+      RAILS_LIVE_RELOAD_HOST: '0.0.0.0'
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+    env_file:
+      - .env
     ports:
       - '3000:3000'
-    environment:
-      RAILS_ENV: development
-      EDITOR: vim
+      - '12345:12345'
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  sidekiq:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: bundle exec sidekiq
+    volumes:
+      - .:/app
+      - bundle_data:/usr/local/bundle:cached
+      - node_modules:/app/node_modules
+      - tmp-data:/app/tmp:cached
+    environment:
+      TZ: Asia/Tokyo
+      POSTGRES_HOST: db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      REDIS_URL: redis://redis:6379/0
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
 volumes:
-  postgres_data:
   bundle_data:
+  postgresql_data:
+  node_modules:
+  tmp-data:
+  redis_data:
