--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "app",
-  "private": true,
-  "devDependencies": {
-    "esbuild": "^0.24.0"
-  },
-  "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets --external:@iconify/* --loader:.js=jsx",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
-  },
+  "private": "true",
+  "type": "module",
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@iconify/icons-lucide": "^1.2.135",
-    "autoprefixer": "^10.4.20",
-    "choices.js": "^10.2.0",
-    "daisyui": "^4.12.14",
-    "iconify-icon": "^2.0.0",
-    "postcss": "^8.4.49",
-    "simplebar": "^6.2.7",
-    "tailwindcss": "^3.4.15"
+    "apexcharts": "^3.45.0",
+    "daisyui": "^4.7.2",
+    "iconify-icon": "^2.3.0",
+    "postcss": "^8.5.1",
+    "simplebar": "^6.3.0",
+    "simplebar-core": "^1.3.0",
+    "tailwindcss": "^3.4.1"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm",
+    "build:watch": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm --watch",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build:css:watch": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --watch"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.2"
   }
 }
