--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": "true",
   "type": "module",
   "dependencies": {
+    "esbuild": "^0.24.2",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@iconify/icons-lucide": "^1.2.135",
@@ -15,12 +16,9 @@
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm --external:@hotwired/turbo-rails --external:@hotwired/stimulus --external:apexcharts",
-    "build:watch": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm --external:@hotwired/turbo-rails --external:@hotwired/stimulus --external:apexcharts --watch",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm",
+    "build:watch": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm --watch",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
     "build:css:watch": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --watch"
-  },
-  "devDependencies": {
-    "esbuild": "^0.24.2"
   }
 }
