--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 !/tmp/storage/.keep
 
 /public/dev-assets/*
+/public/assets/*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
