--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: parts-sync
+    name: parts-sync-app
     env: ruby
     buildCommand: './bin/render-build.sh'
     startCommand: 'bundle exec puma -C config/puma.rb'
@@ -9,7 +9,7 @@ services:
         sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: parts_sync_db
+          name: parts_sync_app_db
           property: connectionString
       - key: RAILS_ENV
         value: production
@@ -17,7 +17,7 @@ services:
         value: true
 
 databases:
-  - name: parts_sync_db
-    databaseName: parts_sync_production
-    user: parts_sync
+  - name: parts_sync_app_db
+    databaseName: parts_sync_app_production
+    user: parts_sync_app
     plan: free
